# ConverteParaVoz

./: .gitignore  20241929-Sun-061939.cpb  README.md  clipboard.cpb  converteParaVoz.py  converte_para_voz.py  converte_para_voz.zsh  dockerfile  package.json  pyproject.toml  resumo.js  run.command  run.sh
